@@ -1,2 +1,2 @@
-#define VERSION "0.94.10"
+#define VERSION "0.95.00"
 #define YEARS   "2008-2012"
