@@ -59,6 +59,12 @@ void usage(string const &program_name)
     "   --no-lines:\n"
     "            do not add #line preprocessor directives to the lex "
                                                             "function.\n"
+    "   --own-tokens (-t):\n"
+    "           flexc++ displays the tokens and their corresponding\n"
+    "           matched text it received from its own lexcial scanner.\n"
+    "   --print-tokens (-t):\n"
+    "           the print() member of the generated parser class displays\n"
+    "           the tokens and their corresponding matched text.\n"
     "   --show-filenames (-F):\n"
     "            display the names of generated files.\n"
     "   --skeleton-directory=<path> (-S):\n"
